# eq_driver

./: README.md  eq3_driver.FCStd  eq3_driver.kicad_dru  eq3_driver.kicad_pcb  eq3_driver.kicad_prl  eq3_driver.kicad_pro  eq3_driver.kicad_sch  motor_drivers.kicad_sch
firmware/esp/: CMakeLists.txt  sdkconfig  sdkconfig.defaults  sdkconfig.old
firmware/esp/main/: CMakeLists.txt  bluetooth_control.c  bluetooth_control.h  hello_world_main.c  telescope_protocol.c  telescope_protocol.h
firmware/rp2/: CMakeLists.txt  Makefile  telescope_mount.cfg
firmware/rp2/src/: main.c  motor_control.c  motor_control.h  step_generator.pio  telescope_protocol.c  telescope_protocol.h  tmc2209.c  tmc2209.h
